[project]
name = "us_hedgefund_agents"
version = "0.1.0"
description = "US Hedge-Fund Multi-Agent Investment Decision System"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "duckdb>=0.10.0",
    "yfinance>=0.2.37",
    "langgraph>=0.0.30",
    "langchain-core>=0.1.30",
    "pydantic>=2.6.0",
    "python-dotenv>=1.0.0",
    "streamlit>=1.35.0",
    "plotly>=5.20.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
